# axum_thiserror

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
flake/: devshell.nix  git-hooks.nix  nixpkgs.nix  packages.nix  skills.nix  treefmt.nix
skills/axum-thiserror/: SKILL.md
src/: lib.rs
tests/: basic_error.rs  json_error.rs
