[package]
name = "axum_thiserror"
version = "0.2.0"
edition = "2021"
description = "A Rust procedural macro for custom error handling in web applications, enabling the association of specific HTTP status codes with error types."
authors = ["VIAL Sébastien (Shyrogan)"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Shyrogan/axum_thiserror"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["schemars"]
# When enabled (default), the derived `IntoResponse` responds with
# `axum::Json(self)` instead of the plain-text `Display` message. Error types
# must then also implement `serde::Serialize` and `schemars::JsonSchema`.
# Disable default features for plain-text responses.
schemars = []

[dependencies]
axum = "0.8.*"
thiserror = "2.0.*"
syn = { version = "2.0.118", features = ["full"] }
proc-macro2 = "1.0.106"
quote = "1.0.46"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
schemars = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[lib]
proc-macro = true
